<resources>
    <string name="app_name">Animal Watcher</string>
    <string name="update">Update</string>
    <string name="weight">Weight: %d</string>
    <string name="height">Height: %d</string>
    <string name="age">Age: %d</string>
    <string name="name">Name: %s</string>
    <string name="type">Type: %s</string>
    <string name="animal_type">Animal Type:</string>
    <string name="name_edit_text">Name:</string>
    <string name="height_edit_text">Height:</string>
    <string name="add_new_animal">Add new Animal</string>
    <string name="update_animal_upper_case">Update Animal</string>
    <string name="age_edit_text">Age:</string>
    <string name="weight_edit_text">Weight:</string>
    <string name="add_animal">Add</string>
    <string name="animal_type_edit_text">Type:</string>
    <string name="update_animal">Update</string>
    <string name="delete_animal">Delete</string>
    <string name="change_mode_on">Change Mode On</string>
    <string name="view_mode">View Mode</string>
    <string name="update_mode">Update Mode</string>
    <string name="delete_mode">Delete Mode</string>
    <string name="observe_animals">Observe</string>
</resources>
